# data-pipeline-debug-openenv

./: .gitignore  README.md  deployment.md  inference.py  pre_validation.py
envs/data_pipeline_debug_env/: .dockerignore  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/data_pipeline_debug_env/server/: Dockerfile  __init__.py  app.py  data_pipeline_debug_environment.py  requirements.txt
outputs/evals/: baseline_report.json
scripts/: run_reference_baseline.py  validate-submission.sh
tests/: test_data_pipeline_debug_env.py
